clang/test/BSC/Negative/OwnedStruct/destructor/forbid_extend_destructor.cbs
// RUN: %clang_cc1 -verify %s
_Owned struct A {    
  ~A(A this); // expected-error {{destructor must have a function body}}
};

_Owned struct B {    
 ~B(B this) {}

};

_Owned struct C<T> {    
 ~C(C<T> this); // expected-error {{destructor must have a function body}}

};